--- a/carp-parent/pom.xml
+++ b/carp-parent/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.lotus.carp</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>carp-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>parent</name>
+    <name>carp-parent</name>
     <url>https://github.com/flian/carp</url>
 
     <parent>
