--- a/carp-ofbiz-entity-engine/pom.xml
+++ b/carp-ofbiz-entity-engine/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>parent</artifactId>
+        <artifactId>carp-parent</artifactId>
         <groupId>org.lotus.carp</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../parent/pom.xml</relativePath>
+        <relativePath>../carp-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ofbiz-entity-engine</artifactId>
+    <artifactId>carp-ofbiz-entity-engine</artifactId>
     <packaging>jar</packaging>
 
-    <name>ofbiz-entity-engine</name>
+    <name>carp-ofbiz-entity-engine</name>
     <url>https://github.com/flian/carp</url>
 
     <properties>
