--- a/carp-parent/pom.xml
+++ b/carp-parent/pom.xml
@@ -81,6 +81,24 @@
                 <artifactId>jta</artifactId>
                 <version>1.1</version>
             </dependency>
+            <!-- excel and jxls -->
+            <!-- jxl -->
+            <dependency>
+                <groupId>net.sourceforge.jexcelapi</groupId>
+                <artifactId>jxl</artifactId>
+                <version>2.6.12</version>
+            </dependency>
+            <!-- jxsl dependency for jexcel -->
+            <dependency>
+                <groupId>org.jxls</groupId>
+                <artifactId>jxls-jexcel</artifactId>
+                <version>1.0.6</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jxls</groupId>
+                <artifactId>jxls</artifactId>
+                <version>2.4.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
