--- a/carp-service/pom.xml
+++ b/carp-service/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>carp-service</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>carp-service</name>
     <url>http://maven.apache.org</url>
@@ -19,11 +19,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
+
     </dependencies>
 </project>
