--- a/carp-base/pom.xml
+++ b/carp-base/pom.xml
@@ -19,14 +19,19 @@
     </properties>
 
     <dependencies>
+        <!--poi -->
         <dependency>
-            <groupId>net.sourceforge.jexcelapi</groupId>
-            <artifactId>jxl</artifactId>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
         </dependency>
-        <!-- jxsl dependency for jexcel -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
+        <!-- jxsl dependency for poi -->
         <dependency>
             <groupId>org.jxls</groupId>
-            <artifactId>jxls-jexcel</artifactId>
+            <artifactId>jxls-poi</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jxls</groupId>
