--- a/carp-parent/pom.xml
+++ b/carp-parent/pom.xml
@@ -19,12 +19,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <springboot.starter.version>1.3.3.RELEASE</springboot.starter.version>
+        <poi.version>3.16</poi.version>
     </properties>
     <repositories>
         <repository>
             <id>alimaven</id>
             <name>aliyun maven</name>
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>macula-repo</id>
+            <name>macula-repo</name>
+            <url>http://maven.infinitus.com.cn:8081/nexus/content/groups/public</url>
         </repository>
     </repositories>
     <dependencyManagement>
@@ -76,23 +82,22 @@
                 <version>2.2.0</version>
                 <scope>test</scope>
             </dependency>
+            <!-- poi,poi-ooxml-->
             <dependency>
-                <groupId>javax.transaction</groupId>
-                <artifactId>jta</artifactId>
-                <version>1.1</version>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi.version}</version>
             </dependency>
-            <!-- excel and jxls -->
-            <!-- jxl -->
             <dependency>
-                <groupId>net.sourceforge.jexcelapi</groupId>
-                <artifactId>jxl</artifactId>
-                <version>2.6.12</version>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
             </dependency>
-            <!-- jxsl dependency for jexcel -->
+            <!-- jxsl dependency for poi -->
             <dependency>
                 <groupId>org.jxls</groupId>
-                <artifactId>jxls-jexcel</artifactId>
-                <version>1.0.6</version>
+                <artifactId>jxls-poi</artifactId>
+                <version>1.0.13</version>
             </dependency>
             <dependency>
                 <groupId>org.jxls</groupId>
