--- a/carp-ofbiz-entity-engine/pom.xml
+++ b/carp-ofbiz-entity-engine/pom.xml
@@ -48,7 +48,8 @@
         <dependency>
             <groupId>com.atlassian.ofbiz</groupId>
             <artifactId>entityengine</artifactId>
-            <version>1.2.2</version>
+            <version>1.3.4</version>
+            <!--<version>1.2.2</version>-->
             <exclusions>
                 <exclusion>
                     <groupId>javax.transaction</groupId>
