--- a/carp-core/pom.xml
+++ b/carp-core/pom.xml
@@ -8,10 +8,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>carp-service</artifactId>
+    <artifactId>carp-core</artifactId>
     <packaging>pom</packaging>
 
-    <name>carp-service</name>
+    <name>carp-core</name>
     <url>http://maven.apache.org</url>
 
     <properties>
