--- a/carp-core/carp-service/pom.xml
+++ b/carp-core/carp-service/pom.xml
@@ -1,28 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>carp-webapp</artifactId>
+        <artifactId>carp-core</artifactId>
         <groupId>org.lotus.carp</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../carp-webapp/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>carp-core</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>carp-service</artifactId>
+    <packaging>jar</packaging>
 
-    <name>carp-core</name>
+    <name>carp-service</name>
     <url>http://maven.apache.org</url>
-    <modules>
-        <module>carp-service</module>
-        <module>carp-service-impl</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
