--- a/carp-parent/pom.xml
+++ b/carp-parent/pom.xml
@@ -20,6 +20,7 @@
         <java.version>1.8</java.version>
         <springboot.starter.version>1.3.3.RELEASE</springboot.starter.version>
         <poi.version>3.16</poi.version>
+        <junit.version>4.12</junit.version>
     </properties>
     <repositories>
         <repository>
@@ -110,7 +111,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
