--- a/carp-ofbiz-entity-engine/pom.xml
+++ b/carp-ofbiz-entity-engine/pom.xml
@@ -38,6 +38,12 @@
             <groupId>jotm</groupId>
             <artifactId>jotm</artifactId>
             <version>${jotm.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jta</artifactId>
+                    <groupId>javax.transaction</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.glassfish.main.connectors</groupId>
@@ -49,11 +55,10 @@
             <groupId>com.atlassian.ofbiz</groupId>
             <artifactId>entityengine</artifactId>
             <version>1.3.4</version>
-            <!--<version>1.2.2</version>-->
             <exclusions>
                 <exclusion>
-                    <groupId>javax.transaction</groupId>
                     <artifactId>jta</artifactId>
+                    <groupId>jta</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
