--- a/carp-webapp/pom.xml
+++ b/carp-webapp/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>carp-base</artifactId>
+        <artifactId>carp-parent</artifactId>
         <groupId>org.lotus.carp</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../carp-base/pom.xml</relativePath>
