--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -15,7 +15,7 @@
     <url>https://github.com/flian/carp</url>
 
     <properties>
-        <main.basedir>${basedir}/../..</main.basedir>
+        <start-class>org.lotus.carp.AdminMain</start-class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -39,12 +39,4 @@
             <version>${carp.version}</version>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
