--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -15,7 +15,7 @@
     <url>https://github.com/flian/carp</url>
 
     <properties>
-        <start-class>org.lotus.carp.AdminMain</start-class>
+        <start-class>org.lotus.carp.AdminApplication</start-class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -39,4 +39,19 @@
             <version>${carp.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>springloaded</artifactId>
+                    <version>1.2.0.RELEASE</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+        </plugins>
+    </build>
 </project>
