--- a/carp-core/carp-service-impl/pom.xml
+++ b/carp-core/carp-service-impl/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
 
     <name>carp-service-impl</name>
-    <url>http://maven.apache.org</url>
+    <url>https://github.com/flian/carp</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
