--- a/carp-front/pom.xml
+++ b/carp-front/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
 
     <name>carp-front</name>
-    <url>http://maven.apache.org</url>
+    <url>https://github.com/flian/carp</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,4 +21,5 @@
     <dependencies>
 
     </dependencies>
+
 </project>
