--- a/carp-mobile/pom.xml
+++ b/carp-mobile/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
 
     <name>carp-mobile</name>
-    <url>http://maven.apache.org</url>
+    <url>https://github.com/flian/carp</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
