--- a/carp-base/pom.xml
+++ b/carp-base/pom.xml
@@ -19,15 +19,6 @@
     </properties>
 
     <dependencies>
-        <!--poi -->
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-        </dependency>
         <!-- jxsl dependency for poi -->
         <dependency>
             <groupId>org.jxls</groupId>
@@ -36,6 +27,11 @@
         <dependency>
             <groupId>org.jxls</groupId>
             <artifactId>jxls</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
