--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -100,6 +100,16 @@
             <!--<version>1.10.2</version>-->
             <version>1.10.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>AdminLTE</artifactId>
+            <version>2.3.8</version>
+        </dependency>
+ <!--       <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>adminlte</artifactId>
+            <version>2.3.11</version>
+        </dependency>-->
     </dependencies>
     <build>
         <plugins>
