--- a/carp-admin/src/main/resources/application.yml
+++ b/carp-admin/src/main/resources/application.yml
@@ -33,6 +33,7 @@ spring:
         exposeSpringMacroHelpers: true
         settings:
           auto_import: /layout/layout.ftl as layout
+    #jpa自动生成sql
     jpa:
       show-sql: true
       properties:
@@ -43,4 +44,6 @@ spring:
             scripts:
               action: create
               create-target: carp_reate.sql
-flyway:  enabled: false
+#flyway配置
+flyway:
+  enabled: true
