--- a/carp-admin/src/main/resources/application-dev.yml
+++ b/carp-admin/src/main/resources/application-dev.yml
@@ -3,13 +3,13 @@ server:
     context-path: /admin
 spring:
     datasource:
-        name: adminPrdEnv
-        url: jdbc:mysql://127.0.0.1/carp?useUnicode=true&characterEncoding=utf-8&useSSL=false
+        name: adminDev
+        url: jdbc:log4jdbc:mysql://127.0.0.1/carp?useUnicode=true&characterEncoding=utf-8&useSSL=false
         username: root
         password: Admin123
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.jdbc.Driver
+        driver-class-name: net.sf.log4jdbc.DriverSpy
         filters: stat
         maxActive: 20
         initialSize: 1
