--- a/carp-admin/src/main/resources/application-dev.yml
+++ b/carp-admin/src/main/resources/application-dev.yml
@@ -1,41 +1,15 @@
-server:
-    port: 8081
-    context-path: /admin
 spring:
     datasource:
         name: adminDev
         url: jdbc:log4jdbc:mysql://127.0.0.1/carp?useUnicode=true&characterEncoding=utf-8&useSSL=false
-        username: root
-        password: Admin123
         # 使用druid数据源
-        type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: net.sf.log4jdbc.DriverSpy
-        filters: stat
-        maxActive: 20
-        initialSize: 1
-        maxWait: 60000
-        minIdle: 1
-        timeBetweenEvictionRunsMillis: 60000
-        minEvictableIdleTimeMillis: 300000
-        validationQuery: select 'x'
-        testWhileIdle: true
-        testOnBorrow: false
-        testOnReturn: false
-        poolPreparedStatements: true
-        maxOpenPreparedStatements: 20
     freemarker:
-        template-loader-path: classpath:/freemarker/
-        suffix: .ftl
         cache: false
-        order: 1
-        contentType: text/html;charset=utf-8
-        requestContextAttribute: rc
-        exposeSpringMacroHelpers: true
-        settings:
-          auto_import: /layout/layout.ftl as layout
+
     #jpa自动生成sql
     jpa:
-      show-sql: true
+      show-sql: false
       properties:
         javax:
          persistence:
@@ -46,4 +20,4 @@ spring:
               create-target: carp_reate.sql
 #flyway配置
 flyway:
-  enabled: false
+  enabled: true
