--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -110,6 +110,12 @@
             <artifactId>AdminLTE</artifactId>
             <version>2.3.8</version>
         </dependency>
+        <!-- element-ui -->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>element-ui</artifactId>
+            <version>1.3.7</version>
+        </dependency>
  <!--       <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>adminlte</artifactId>
