--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -93,12 +93,7 @@
             <artifactId>jQuery-Autocomplete</artifactId>
             <version>1.2.7</version>
         </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>vue</artifactId>
-            <!--<version>1.0.24</version>-->
-            <version>2.1.3</version>
-        </dependency>
+
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>datatables</artifactId>
@@ -109,6 +104,11 @@
             <groupId>org.webjars</groupId>
             <artifactId>AdminLTE</artifactId>
             <version>2.3.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>vue</artifactId>
+            <version>2.4.2</version>
         </dependency>
         <!-- element-ui -->
         <dependency>
