--- a/carp-core/carp-service/pom.xml
+++ b/carp-core/carp-service/pom.xml
@@ -18,6 +18,10 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
