--- a/carp-admin/pom.xml
+++ b/carp-admin/pom.xml
@@ -110,6 +110,11 @@
             <artifactId>vue</artifactId>
             <version>2.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>axios</artifactId>
+            <version>0.16.1</version>
+        </dependency>
         <!-- element-ui -->
         <dependency>
             <groupId>org.webjars.npm</groupId>
