--- a/carp-core/carp-service/pom.xml
+++ b/carp-core/carp-service/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>spring-data-commons</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
