--- a/carp-base/pom.xml
+++ b/carp-base/pom.xml
@@ -33,5 +33,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
