--- a/carp-admin/src/main/resources/application.yml
+++ b/carp-admin/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
-        filters: stat
+        filters: stat,wall,log4j
         maxActive: 20
         initialSize: 1
         maxWait: 60000
@@ -23,6 +23,7 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
+        logSlowSql: true
     freemarker:
         template-loader-path: classpath:/freemarker/
         suffix: .ftl
