--- a/carp-admin/src/main/resources/application-dev.yml
+++ b/carp-admin/src/main/resources/application-dev.yml
@@ -4,6 +4,8 @@ spring:
         url: jdbc:log4jdbc:mysql://127.0.0.1/carp?useUnicode=true&characterEncoding=utf-8&useSSL=false
         # 使用druid数据源
         driver-class-name: net.sf.log4jdbc.DriverSpy
+        #dev 不用wall设置
+        filters: stat,log4j
     freemarker:
         cache: false
 
