refactory left menu css js

--- a/carp-admin/src/main/resources/config/carp.properties
+++ b/carp-admin/src/main/resources/config/carp.properties
@@ -1,2 +1,2 @@
-carp.security.publicUrlPattern = /|/403.*|/login.*|/logout.*|/webjars/.*|/css/.*|/druid/.*|/index/.*|/home|/dashboard
+carp.security.publicUrlPattern = /|/403.*|/login.*|/logout.*|/webjars/.*|/css/.*|/js/.*|/druid/.*|/index/.*|/home|/dashboard
 carp.security.securityUrlPattern = /.*
