图片验证码

--- a/carp-admin/src/main/resources/config/carp.properties
+++ b/carp-admin/src/main/resources/config/carp.properties
@@ -1,2 +1,10 @@
+#不需要权限认证的url
 carp.security.publicUrlPattern = /|/403.*|/login.*|/logout.*|/webjars/.*|/css/.*|/js/.*|/druid/.*|/index/.*|/home|/dashboard
+#需要保护的url
 carp.security.securityUrlPattern = /.*
+
+#是否禁用登录验证码
+carp.security.kaptcha.captchaEnable=true
+
+#密码错误多少次后出现验证码
+carp.security.kaptcha.captchaFailedTimes = 0
