--- a/carp-parent/pom.xml
+++ b/carp-parent/pom.xml
@@ -134,6 +134,12 @@
                 <version>${log4jdbc.version}</version>
                 <scope>runtime</scope>
             </dependency>
+            <!-- https://github.com/penggle/kaptcha -->
+            <dependency>
+                <groupId>com.github.penggle</groupId>
+                <artifactId>kaptcha</artifactId>
+                <version>2.3.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
