--- a/carp-admin/src/main/resources/config/carp.properties
+++ b/carp-admin/src/main/resources/config/carp.properties
@@ -1,5 +1,5 @@
 #不需要权限认证的url
-carp.security.publicUrlPattern = /|/403.*|/forbidden|/login.*|/logout.*|/webjars/.*|/css/.*|/js/.*|/druid/.*|/index/.*|/home|/dashboard
+carp.security.publicUrlPattern = /|/403.*|/forbidden|/public/.*|/login.*|/logout.*|/webjars/.*|/css/.*|/js/.*|/druid/.*|/index/.*|/home|/dashboard
 #需要保护的url
 carp.security.securityUrlPattern = /.*
 
