--- a/carp-commerce/carp-commerce-service-impl/pom.xml
+++ b/carp-commerce/carp-commerce-service-impl/pom.xml
@@ -24,5 +24,10 @@
       <artifactId>carp-commerce-service</artifactId>
       <version>${carp.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
