--- a/carp-commerce/carp-commerce-service-impl/pom.xml
+++ b/carp-commerce/carp-commerce-service-impl/pom.xml
@@ -29,5 +29,10 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
