--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>org.lotus.carp</groupId>
     <artifactId>carp</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>carp</name>
     <modules>
         <module>carp-parent</module>
         <module>carp-base</module>
@@ -17,7 +19,6 @@
         <module>carp-mobile</module>
         <module>carp-webapp</module>
     </modules>
-    <packaging>pom</packaging>
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -39,4 +40,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
+
