--- a/carp-commerce/carp-commerce-service-impl/pom.xml
+++ b/carp-commerce/carp-commerce-service-impl/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>org.lotus.carp</groupId>
       <artifactId>carp-commerce-service</artifactId>
-      <version>${carp.version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
