--- a/carp-core/carp-service-impl/pom.xml
+++ b/carp-core/carp-service-impl/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.lotus.carp</groupId>
             <artifactId>carp-service</artifactId>
-            <version>${carp.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
