--- a/carp-commerce/carp-commerce-admin/pom.xml
+++ b/carp-commerce/carp-commerce-admin/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.lotus.carp</groupId>
             <artifactId>carp-commerce-service-impl</artifactId>
-            <version>${carp.version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
