--- a/carp-commerce/pom.xml
+++ b/carp-commerce/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.lotus.carp</groupId>
             <artifactId>carp-base</artifactId>
-            <version>${carp.version}</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
