--- a/carp-webapp/pom.xml
+++ b/carp-webapp/pom.xml
@@ -28,17 +28,17 @@
         <dependency>
             <groupId>org.lotus.carp</groupId>
             <artifactId>carp-commerce-admin</artifactId>
-            <version>${carp.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.lotus.carp</groupId>
             <artifactId>carp-front</artifactId>
-            <version>${carp.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.lotus.carp</groupId>
             <artifactId>carp-mobile</artifactId>
-            <version>${carp.version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
     <build>
