--- a/carp-webapp/pom.xml
+++ b/carp-webapp/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.lotus.carp</groupId>
             <artifactId>carp-admin</artifactId>
-            <version>${carp.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- include commerce admin -->
         <dependency>
