--- a/carp-admin/src/main/resources/config/application.yml
+++ b/carp-admin/src/main/resources/config/application.yml
@@ -54,8 +54,17 @@ flyway:
 #carp配置
 carp:
   config:
-    default-title: "Carp"
-    version:  "0.1.0"
-    versionStatus: "RC"
+  #默认页面的title
+    default-title: "Carp Demo"
+    #项目版本号
+    version:  "V0.1.0"
+    #版本状态
+    version-status: "RC"
+    #项目名称,各种地方用到
+    project-name: "Carp"
+    #登录页面的字
+    login-text: "login"
+    #是否显示导航上没有实现的链接
+    show-unused-icons:  false
     expose-static-classes: []
     expose-bean-names:  ["carpConfig"]
