--- a/carp-admin/src/main/resources/config/carp.properties
+++ b/carp-admin/src/main/resources/config/carp.properties
@@ -4,7 +4,7 @@ carp.security.publicUrlPattern = /|/403.*|/forbidden|/public/.*|/login.*|/logout
 #需要登录才能范围的url
 carp.security.authenticatedUrlPattern =
 
-#需要保护的url
+#需要自定义角色保护的url
 carp.security.securityUrlPattern = /.*
 
 #是否禁用登录验证码
