--- a/carp-webapp/pom.xml
+++ b/carp-webapp/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <start-class>org.lotus.carp.WebappApplication</start-class>
+        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
     <dependencies>
