--- a/carp-admin/src/main/resources/config/application.yml
+++ b/carp-admin/src/main/resources/config/application.yml
@@ -65,8 +65,10 @@ carp:
     #登录页面的字
     login-text: "login"
     login-user-name: "admin"
-    login-user-password:  "Admin123"
+    login-user-password:  "admin123"
     #是否显示导航上没有实现的链接
     show-unused-icons:  true
     expose-static-classes: []
     expose-bean-names:  ["carpConfig"]
+    theme: "adminLTE"
+    #theme: "huiAdmin"
