--- a/carp-admin/src/main/resources/application-it.yml
+++ b/carp-admin/src/main/resources/application-it.yml
@@ -3,6 +3,7 @@ spring:
     datasource:
         name: adminIntegrationTest
         url: jdbc:log4jdbc:mysql://127.0.0.1/carp_it?useUnicode=true&characterEncoding=utf-8&useSSL=false
+        password: lf0507
         # 使用druid数据源
         driver-class-name: net.sf.log4jdbc.DriverSpy
         #dev 不用wall设置
